--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -17,18 +17,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # clone our repository into the runner
-      - uses: actions/checkout@v2
-      # install java on the runner
-      - name: Setup JDK 18
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
         with:
-          java-version: 18
+          java-version: '18'
+          distribution: 'zulu'
       # make sure that our plugin builds
       - name: Build Project
-        run: ./mvn compile
+        run: mvn compile
       # build the jars
       - name: Build Jars
-        run: ./mvn clean install
+        run: mvn clean install
       # create a development build
       - name: Release
         uses: "marvinpinto/action-automatic-releases@latest"
