--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -38,4 +38,4 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-                        build/libs/*.jar
+                        target/*.jar
