--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,10 +1,10 @@
 
-name: "Prerelease"
+name: "Development Release [UNSTABLE]"
 on: 
   push:
     # Run on the main branch
     branches: 
-      - "main"
+      - "dev"
     # Ignore documentation
     paths-ignore:
       - ".idea"
